--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "input-otp": "^1.4.2",
     "lenis": "1.1.14-dev.5",
     "lucide-react": "^0.510.0",
     "react": "^19.1.0",
