--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VITE_API_BASE_URL="https://thibaudbdx.softvencefsd.xyz"
+# VITE_API_BASE_URL="https://thibaudbdx.softvencefsd.xyz"
+VITE_API_BASE_URL="https://jsonplaceholder.typicode.com"
