--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-# VITE_API_BASE_URL="https://thibaudbdx.softvencefsd.xyz/api"
-VITE_API_BASE_URL="https://jsonplaceholder.typicode.com"
+VITE_API_BASE_URL="https://thibaudbdx.softvencefsd.xyz/api"
+# VITE_API_BASE_URL="https://jsonplaceholder.typicode.com"
