add: sidebar, layout, index, prospect List updated

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# VITE_API_BASE_URL="https://thibaudbdx.softvencefsd.xyz/api"
+VITE_API_BASE_URL="https://thibaudbdx.softvencefsd.xyz/api"
 # VITE_API_BASE_URL="https://jsonplaceholder.typicode.com"
 # VITE_API_BASE_URL="https://0f16-137-59-180-162.ngrok-free.app"
-VITE_API_BASE_URL="https://96b9-137-59-180-162.ngrok-free.app"
+# VITE_API_BASE_URL="https://96b9-137-59-180-162.ngrok-free.app"
